bundled_metadata/force-app/main/default/objects/Asset/Asset.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>