bundled_metadata/force-app/main/default/objects/Asset/fields/Active_Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract line item part of active contract that relates to this</description>
    <label>Active Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>