bundled_metadata/force-app/main/default/objects/Asset/fields/Compliant_with_PoG__c.field-meta.xml
<CustomField>
    <fullName>Compliant_with_PoG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliant with PoG</label>
    <type>Checkbox</type>
</CustomField>