bundled_metadata/force-app/main/default/objects/Asset/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC01</fullName>
                <label>new</label>
            </value>
            <value>
                <fullName>AC02</fullName>
                <label>refurbished</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>