bundled_metadata/force-app/main/default/objects/Asset/fields/CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ID__c</fullName>
    <externalId>true</externalId>
    <label>CUST ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>