bundled_metadata/force-app/main/default/objects/Asset/fields/Cust_Id_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Cust_Id_Serial_Number__c</fullName>
    <description>Customer Serial Number</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Cust Id Serial Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>