bundled_metadata/force-app/main/default/objects/Asset/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>F_01</fullName>
                <isActive>false</isActive>
                <label>F_01</label>
            </value>
            <value>
                <fullName>F_02</fullName>
                <isActive>false</isActive>
                <label>F_02</label>
            </value>
            <value>
                <fullName>F_03</fullName>
                <isActive>false</isActive>
                <label>F_03</label>
            </value>
            <value>
                <fullName>F_04</fullName>
                <isActive>false</isActive>
                <label>F_04</label>
            </value>
            <value>
                <fullName>F_05</fullName>
                <isActive>false</isActive>
                <label>F_05</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>