bundled_metadata/force-app/main/default/objects/Asset/fields/Installation_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Installation_Instructions__c</fullName>
    <label>Installation Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central aisle</fullName>
            </value>
            <value>
                <fullName>Checkout area</fullName>
            </value>
            <value>
                <fullName>Behind the counter facing the customers</fullName>
            </value>
            <value>
                <fullName>Self-service area in the store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>