bundled_metadata/force-app/main/default/objects/Asset/fields/Installation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Installation_Reason__c</fullName>
    <label>Asset Installation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Existing store</fullName>
            </value>
            <value>
                <fullName>Existing store, additional equipment</fullName>
            </value>
            <value>
                <fullName>Found Equipment</fullName>
            </value>
            <value>
                <fullName>New client</fullName>
            </value>
            <value>
                <fullName>Equipment replacement</fullName>
            </value>
            <value>
                <fullName>Equipment found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>