bundled_metadata/force-app/main/default/objects/Asset/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Asset Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkout area</fullName>
            </value>
            <value>
                <fullName>Behind the counter</fullName>
            </value>
            <value>
                <fullName>Self-Service area</fullName>
            </value>
            <value>
                <fullName>Next To Counter</fullName>
            </value>
            <value>
                <fullName>Beers, Wines and Spirits</fullName>
            </value>
            <value>
                <fullName>Soft Drinks</fullName>
            </value>
            <value>
                <fullName>Hot Drinks</fullName>
            </value>
            <value>
                <fullName>Food To Go</fullName>
            </value>
            <value>
                <fullName>Confectionary</fullName>
            </value>
            <value>
                <fullName>Next To Beverages</fullName>
            </value>
            <value>
                <fullName>Central aisle</fullName>
            </value>
            <value>
                <fullName>L_01</fullName>
                <isActive>false</isActive>
                <label>L_01</label>
            </value>
            <value>
                <fullName>L_02</fullName>
                <isActive>false</isActive>
                <label>L_02</label>
            </value>
            <value>
                <fullName>L_03</fullName>
                <isActive>false</isActive>
                <label>L_03</label>
            </value>
            <value>
                <fullName>L_04</fullName>
                <isActive>false</isActive>
                <label>L_04</label>
            </value>
            <value>
                <fullName>L_05</fullName>
                <isActive>false</isActive>
                <label>L_05</label>
            </value>
            <value>
                <fullName>L_06</fullName>
                <isActive>false</isActive>
                <label>L_06</label>
            </value>
            <value>
                <fullName>L_07</fullName>
                <isActive>false</isActive>
                <label>L_07</label>
            </value>
            <value>
                <fullName>L_08</fullName>
                <isActive>false</isActive>
                <label>L_08</label>
            </value>
            <value>
                <fullName>L_09</fullName>
                <isActive>false</isActive>
                <label>L_09</label>
            </value>
            <value>
                <fullName>L_10</fullName>
                <isActive>false</isActive>
                <label>L_10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>