bundled_metadata/force-app/main/default/objects/Asset/fields/Maintenance_Plant__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plant__c</fullName>
    <label>Maintenance Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>