bundled_metadata/force-app/main/default/objects/Asset/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>ISO alpha 2 country code of the respective country / market</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>