bundled_metadata/force-app/main/default/objects/Asset/fields/Missing_Asset__c.field-meta.xml
<CustomField>
    <fullName>Missing_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Asset</label>
    <type>Checkbox</type>
</CustomField>