bundled_metadata/force-app/main/default/objects/Asset/fields/Negotiated_By__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_By__c</fullName>
    <label>Negotiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Store Owner</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Store Assistant</fullName>
            </value>
            <value>
                <fullName>N_01</fullName>
                <isActive>false</isActive>
                <label>N_01</label>
            </value>
            <value>
                <fullName>N_02</fullName>
                <isActive>false</isActive>
                <label>N_02</label>
            </value>
            <value>
                <fullName>N_03</fullName>
                <isActive>false</isActive>
                <label>N_03</label>
            </value>
            <value>
                <fullName>N_04</fullName>
                <isActive>false</isActive>
                <label>N_04</label>
            </value>
            <value>
                <fullName>N_05</fullName>
                <isActive>false</isActive>
                <label>N_05</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>