bundled_metadata/force-app/main/default/objects/Asset/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Parent Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>