bundled_metadata/force-app/main/default/objects/Asset/fields/POSM_Brand__c.field-meta.xml
<CustomField>
    <fullName>POSM_Brand__c</fullName>
    <label>POSM Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>