bundled_metadata/force-app/main/default/objects/Asset/fields/POSM_Count__c.field-meta.xml
<CustomField>
    <fullName>POSM_Count__c</fullName>
    <label>POSM Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>half-door</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>single-door</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>double-door</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>three-door</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>four-door</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>five-door</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>