bundled_metadata/force-app/main/default/objects/Asset/fields/POSM_Description__c.field-meta.xml
<CustomField>
    <fullName>POSM_Description__c</fullName>
    <label>POSM Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>