bundled_metadata/force-app/main/default/objects/Asset/fields/POSM_Subtype__c.field-meta.xml
<CustomField>
    <fullName>POSM_Subtype__c</fullName>
    <label>POSM Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OF</fullName>
                <label>Air Curtain Cooler</label>
            </value>
            <value>
                <fullName>SOF</fullName>
                <label>Air Curtain Small Cooler</label>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Chalkboard</fullName>
            </value>
            <value>
                <fullName>Chiller Basket</fullName>
            </value>
            <value>
                <fullName>Chr Tray</fullName>
            </value>
            <value>
                <fullName>Clipstrip</fullName>
            </value>
            <value>
                <fullName>Cooler 1 Door Slim</fullName>
            </value>
            <value>
                <fullName>Cooler 2 Doors Slim</fullName>
            </value>
            <value>
                <fullName>POM-CU</fullName>
                <label>Cooling Unit Post-Mix</label>
            </value>
            <value>
                <fullName>POM-JCT</fullName>
                <label>Counter top Juice Post-Mix</label>
            </value>
            <value>
                <fullName>POM-CT</fullName>
                <label>Counter top Post-Mix</label>
            </value>
            <value>
                <fullName>Counter top unit</fullName>
            </value>
            <value>
                <fullName>Divisible Tray</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
                <label>Double Door Cooler</label>
            </value>
            <value>
                <fullName>Dumpbin</fullName>
            </value>
            <value>
                <fullName>Food Display</fullName>
            </value>
            <value>
                <fullName>FSDU</fullName>
            </value>
            <value>
                <fullName>Glassware</fullName>
            </value>
            <value>
                <fullName>Hanging Unit</fullName>
            </value>
            <value>
                <fullName>Hessian Basket</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
                <label>Ice Machine</label>
            </value>
            <value>
                <fullName>Key Period Operation</fullName>
            </value>
            <value>
                <fullName>Large Rack</fullName>
            </value>
            <value>
                <fullName>Lemonade Server</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Mini Bar Cooler</label>
            </value>
            <value>
                <fullName>Monoblock</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>Open Top Cooler</label>
            </value>
            <value>
                <fullName>Parasols</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>