bundled_metadata/force-app/main/default/objects/Asset/fields/POSM_Type__c.field-meta.xml
<CustomField>
    <fullName>POSM_Type__c</fullName>
    <label>POSM Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Cooler</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Ice Machine</fullName>
            </value>
            <value>
                <fullName>Vending machine</fullName>
            </value>
            <value>
                <fullName>Rack</fullName>
            </value>
            <value>
                <fullName>Main Shelf</fullName>
            </value>
            <value>
                <fullName>POS Service</fullName>
            </value>
            <value>
                <fullName>Cash Visibility</fullName>
            </value>
            <value>
                <fullName>Post Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>