bundled_metadata/force-app/main/default/objects/Asset/fields/Removal_Description__c.field-meta.xml
<CustomField>
    <fullName>Removal_Description__c</fullName>
    <label>Removal Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>