bundled_metadata/force-app/main/default/objects/Asset/fields/Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removal_Reason__c</fullName>
    <label>Asset Removal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client closed/doesn&apos;t exist</fullName>
            </value>
            <value>
                <fullName>Close for renovation</fullName>
            </value>
            <value>
                <fullName>Decrease of equipment quantity</fullName>
            </value>
            <value>
                <fullName>Equipment broken</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Low efficiency</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Stop of cooperation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>