bundled_metadata/force-app/main/default/objects/Asset/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>