bundled_metadata/force-app/main/default/objects/Asset/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REN</fullName>
                <label>Reducing coolers number</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Closed store</label>
            </value>
            <value>
                <fullName>LV</fullName>
                <label>Low level of acquisitions</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>Customer’s request</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Removal Seasonal allocation</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Inappropriately used</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Replacing cooler</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>New store</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Existing store</label>
            </value>
            <value>
                <fullName>CE/AD</fullName>
                <label>Existing store, additional cooler</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Special event</label>
            </value>
            <value>
                <fullName>SB</fullName>
                <label>Install Seasonal allocation</label>
            </value>
            <value>
                <fullName>DAM</fullName>
                <label>Replacing broken cooler</label>
            </value>
            <value>
                <fullName>OUTF</fullName>
                <label>Replacing outdated cooler</label>
            </value>
            <value>
                <fullName>EXCAP</fullName>
                <label>Different capacity replacement</label>
            </value>
            <value>
                <fullName>MICC</fullName>
                <label>Client closed/Does not exist</label>
            </value>
            <value>
                <fullName>MIDE</fullName>
                <label>Decrease of Eqp qty</label>
            </value>
            <value>
                <fullName>MIEB</fullName>
                <label>Eqp broken</label>
            </value>
            <value>
                <fullName>MIES</fullName>
                <label>Event/Seasonal</label>
            </value>
            <value>
                <fullName>MILE</fullName>
                <label>Low Efficiency</label>
            </value>
            <value>
                <fullName>MIOT</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>MIRE</fullName>
                <label>Replacement</label>
            </value>
            <value>
                <fullName>MISC</fullName>
                <label>Stop of cooperation</label>
            </value>
            <value>
                <fullName>MRCR</fullName>
                <label>Closed for Renovation</label>
            </value>
            <value>
                <fullName>MROE</fullName>
                <label>Use of Own Eqp</label>
            </value>
            <value>
                <fullName>MRVP</fullName>
                <label>Virtual Pickup</label>
            </value>
            <value>
                <fullName>MIFE</fullName>
                <label>Found Equipment</label>
            </value>
            <value>
                <fullName>MIIE</fullName>
                <label>Increase Eqp qty</label>
            </value>
            <value>
                <fullName>MINC</fullName>
                <label>New client</label>
            </value>
            <value>
                <fullName>MIVI</fullName>
                <label>Virtual Install</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>