bundled_metadata/force-app/main/default/objects/Asset/fields/Route_Id__c.field-meta.xml
<CustomField>
    <fullName>Route_Id__c</fullName>
    <externalId>true</externalId>
    <label>Route Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>