bundled_metadata/force-app/main/default/objects/Asset/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <externalId>true</externalId>
    <label>SerialNumber</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>