bundled_metadata/force-app/main/default/objects/Asset/fields/Service_Request_type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_type__c</fullName>
    <label>Service Request type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <isActive>false</isActive>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>