bundled_metadata/force-app/main/default/objects/Asset/fields/Share_of_Pep_Products__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Pep_Products__c</fullName>
    <label>Share of PEP Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>