bundled_metadata/force-app/main/default/objects/Asset/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <label>Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>SP_01</fullName>
                <isActive>false</isActive>
                <label>SP_01</label>
            </value>
            <value>
                <fullName>SP_02</fullName>
                <isActive>false</isActive>
                <label>SP_02</label>
            </value>
            <value>
                <fullName>SP_03</fullName>
                <isActive>false</isActive>
                <label>SP_03</label>
            </value>
            <value>
                <fullName>SP_04</fullName>
                <isActive>false</isActive>
                <label>SP_04</label>
            </value>
            <value>
                <fullName>SP_05</fullName>
                <isActive>false</isActive>
                <label>SP_05</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>