bundled_metadata/force-app/main/default/objects/Asset/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>