bundled_metadata/force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M01</fullName>
                <label>New Request</label>
            </value>
            <value>
                <fullName>M02</fullName>
                <label>Service Request</label>
            </value>
            <value>
                <fullName>M11</fullName>
                <label>Removal Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>