bundled_metadata/force-app/main/default/objects/Asset/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>