bundled_metadata/force-app/main/default/objects/Asset/recordTypes/Asset_Request.recordType-meta.xml
<RecordType>
    <fullName>Asset_Request</fullName>
    <active>true</active>
    <label>Asset Request</label>
</RecordType>